commit da avaliação Mapa-Prog 2 - Atualização do nome do projeto

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=br.teste.alunounicesumar
+application.title=br.mapa.unicesumar.progii
 application.vendor=usuario
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,14 +29,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/br.teste.alunounicesumar.jar
+dist.jar=${dist.dir}/br.mapa.unicesumar.progii.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/br.teste.alunounicesumar
+dist.jlink.output=${dist.jlink.dir}/br.mapa.unicesumar.progii
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.1.0.jar=/home/usuario/Downloads/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar
-file.reference.mysql-connector-j-8.1.0.jar-1=C:\\Users\\z004kreh\\Downloads\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar=home/usuario/Downloads/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar-1=../../../Users/z004kreh/Downloads/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=br.teste.alunounicesumar
+jlink.launcher.name=br.mapa.unicesumar.progii
 main.class=br.unicesumar.main.SistemaMapaProgII
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
